
   o it's now possible to set a static forward value independent from the
     actual value of the event which initiates the forwarding.

     E.g. with
        EVENT_xxx fwd_id=SENDER:1:42
     the SENDER:1 will always get value 42 for additional processing

   o support for multiple MBHP_MF_NG modules in a chain.
     See cfg/test/mf_multi.ngc for a configuration example


MIDIbox NG V1.026
~~~~~~~~~~~~~~~~~

   o support for nrpn_format=MsbOnly (e.g. for MBSEQ V4 NRPNs)

   o new EVENT parameter ain_sensor_mode:

     With ain_sensor_mode=NoteOnOff, AIN and AINSER events, which are 
     assigned to Note events, send velocity 0 before a new Note is sent
     with velocity > 0 to avoid hanging notes.

     With ain_sensor_mode=None (default if no sensor mode specified),
     Note events will be generated as a continuous stream like CCs


MIDIbox NG V1.025
~~~~~~~~~~~~~~~~~

   o new terminal commands:
     - ngc: allows to execute a .NGC command directly
     - ngr: allows to execute a .NGR command directly
     - ngr_section: sets the ^section for .NGR execution
     - ngr_value: sets the ^value for .NGR execution
     - run: can now also executed without specified <section> <value>
       (the previously set values will be taken in this case)

   o inofficial support for MAX72xx chains - see cfg/tests/max72xx.ngc for
     a configuration example (no schematic available yet)

   o .NGR: fixed "delay statements in if branches" issue

   o .NGR: added "set_lock" command. It allows to prevent, that received
     events will overwrite a value of an event.

   o .NGR: the "set" command now also allows to change variables, e.g.:
       set ^value 1
       set ^section 2
       set ^bank 3
       (etc...)
     the last one (^bank) will also switch MBNG to the specified bank

   o .NGR: added variables ^dev, ^pat, ^bnk, ^ins, ^chn
     These are the same which can be used in SysEx strings, and which can