@@ -356,3 +356,39 @@ EVENT_LED_MATRIX id=24 led_matrix_pattern=LcDigit  type=CC chn= 1 cc= 73  syxdum
 # status digits
 EVENT_LED_MATRIX id=39 led_matrix_pattern=LcDigit  type=CC chn= 1 cc= 75  syxdump_pos=11:1
 EVENT_LED_MATRIX id=40 led_matrix_pattern=LcDigit  type=CC chn= 1 cc= 74  syxdump_pos=11:0
+
+
+################################################################################
+# Meters
+# Assign to lc_meter_port=USB1 (incoming Channel Pressure events will be
+# converted into meter pattern)
+################################################################################
+DOUT_MATRIX n= 4   rows=16 inverted=0  sr_dout_sel1=17  sr_dout_r1=18 sr_dout_r2=19 \
+                   lc_meter_port=USB1
+
+LC_METER_PATTERN pos= 0  pattern=0000000000000000
+LC_METER_PATTERN pos= 1  pattern=1000000000000000
+LC_METER_PATTERN pos= 2  pattern=1100000000000000
+LC_METER_PATTERN pos= 3  pattern=1110000000000000
+LC_METER_PATTERN pos= 4  pattern=1110000000000000
+LC_METER_PATTERN pos= 5  pattern=1111000000000000
+LC_METER_PATTERN pos= 6  pattern=1111100000000000
+LC_METER_PATTERN pos= 7  pattern=1111110000000000
+LC_METER_PATTERN pos= 8  pattern=1111111000000000
+LC_METER_PATTERN pos= 9  pattern=1111111100000000
+LC_METER_PATTERN pos=10  pattern=1111111100000000
+LC_METER_PATTERN pos=11  pattern=1111111110000000
+LC_METER_PATTERN pos=12  pattern=1111111110000000
+LC_METER_PATTERN pos=13  pattern=1111111111000000
+LC_METER_PATTERN pos=14  pattern=1111111111000000
+LC_METER_PATTERN pos=15  pattern=1111111111100000
+
+# where is the overload LED located?
+LC_METER_PATTERN pos= O  pattern=0000000000010000
+
+# Reset all meters if the "global meter mode" message is received
+EVENT_RECEIVER id=  20  fwd_id=SENDER:20 \
+               type=SysEx stream="0xf0 0x00 0x00 0x66 ^dev 0x21"
+
+EVENT_SENDER   id=  20 \
+               type=Meta  meta=ResetMeters
